--- a/businesspage.html
+++ b/businesspage.html
@@ -20,6 +20,6 @@ for more inquiries, please contact us at 09*****
 
 note:This is for educational purposes only, and is not a real business. </p>
 </pre>
-	<a href="indexc.html">Go back to homepage here!</a>
+	<a href="index.html">Go back to homepage here!</a>
 </body>
 </html>
