--- a/storypage.html
+++ b/storypage.html
@@ -10,6 +10,6 @@
  first published in 1843. It is related by an unnamed narrator who endeavors to convince the reader
  of the narrator's sanity while simultaneously describing a murder the narrator committed.</p>
 </pre>
-	<p><a href="indexc.html">Go back to homepage here!</a></p>
+	<p><a href="index.html">Go back to homepage here!</a></p>
 </body>
 </html>
