--- a/studentinfob.html
+++ b/studentinfob.html
@@ -12,7 +12,7 @@
  	html webpage creations. That's all thank you for stopping by:)
 </p>
 </pre>
-<a href="indexc.html">Go back to homepage here!</a>
+<a href="index.html">Go back to homepage here!</a>
 </body>
 </html>
  
